Fix sunburst tooltip z-index

--- a/src/main/resources/META-INF/resources/webjars/service/prov/prov.css
+++ b/src/main/resources/META-INF/resources/webjars/service/prov/prov.css
@@ -59,7 +59,8 @@
 
 #prov-sunburst {
 	height: 0;
-    top: -18px;
+	top: -18px;
+	z-index: 1;
 }
 #prov-barchart {
 	height: 0;
